fix: ajustes finais de entrega
